--- a/src/Components/AllLogin/StudentLogin/StudentLogin.css
+++ b/src/Components/AllLogin/StudentLogin/StudentLogin.css
@@ -84,6 +84,11 @@
     margin-top: 15px;
     font-size: 20px;
 }
+.LoginPicStudent{
+    width: 70%;
+    height: 70%;
+    object-fit: contain;
+}
 .login-text h1{
    font-size: 40px;
    margin-bottom: 25px;
