--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,21 +5,23 @@
 }
 .Header_Main{
     width: 100%;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    /* padding: 10px; */
+    box-shadow: 0px 1px 2px 0px rgba(116, 106, 115, 1);
 }
 .Header_Wrap{
     width: 90%;
-    /* height: 10%; */
+    /* height: 80%; */
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* background-color: green; */
 }
 .Header_Logo_Wrap{
     width: 100px;
-    height: 100px;
 }
 .Header_Logo{
     width: 70px;
@@ -50,7 +52,7 @@
 .Header_Button_SignUp:hover{
     background-color: white;
     color: #5390D9;
-    border: 1px solid rgb(216, 212, 212);
+    border: 2px solid rgb(216, 212, 212);
     cursor: pointer;
 }
 .Header_Button_Login{
