added reset passsword for all user

--- a/src/Components/ForgetPassword/ForgetPassAdmin.css
+++ b/src/Components/ForgetPassword/ForgetPassAdmin.css
@@ -18,6 +18,12 @@
     justify-content: center;
     /* background-color: green; */
   }
+  .ResetImage{
+    width: 300px;
+    height: 280px;
+    /* border-radius: 100%;
+    border: 1px solid rgb(226, 223, 223); */
+  }
   .forget_text{
     display: flex;
     flex-direction: column;
