--- a/src/Component1/SignUp/SignUp.css
+++ b/src/Component1/SignUp/SignUp.css
@@ -39,10 +39,8 @@
     width: 43%;
     height: 100%;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
-    border: none;
-    outline: none;
     flex-direction: column;
     line-height: 1.7;
     margin-top: 10px;
@@ -56,15 +54,16 @@
 
 .SignUpInput {
     width: 350px;
-    border: 1px solid rgb(94, 92, 92);
+    border: none;
+    border-bottom:1px solid gray ;
     outline: none;
-    border-radius: 10px;
     height: 50px;
     background-color: white;
-    padding: 15px;
+    /* padding: 15px; */
 }
 
-.label {
+.Input-Label {
+    width: 400px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -77,7 +76,7 @@
     height: 40px;
     border: none;
     outline: none;
-    border-radius: 15px;
+    border-radius: 5px;
     background-color: #5390D9;
     color: white;
     cursor: pointer;
@@ -106,17 +105,21 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 50%;
-    height: 100%;
+    width: 40%;
+    height: 100vh;
     background-color: #5390D9;
     color: white;
-    border-radius: 12px 0px 12px 0px;
+    border-radius: 0px 12px 12px 0px;
     border: 1px solid #5390D9;
     margin-right: 10px;
     outline: none;
     /* clip-path: polygon(0 0, 100% 0%, 100% 100%, 25% 100%); */
 }
-
+.WelcomeMess{
+    display: flex;
+    width: 100% ;
+    flex-direction: column;
+}
 .SignUpText {
     color: rgb(15, 94, 247);
 }
@@ -170,7 +173,14 @@
     left: 400px;
 }
 .Login_SignUp_Mobile{
-    display: none;
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.Login_SignUp_Bttn_Mobile{
+    color: #5390D9;
+    margin-left: 10px;
 }
 
 @media screen and (max-width: 769px) {
