--- a/src/Component1/AdminDashboard/AdminDashboard.css
+++ b/src/Component1/AdminDashboard/AdminDashboard.css
@@ -5,24 +5,31 @@
 }
 .AdminDashboard_Main{
     width: 100%;
-    height: 100vh;
+}
+.AdminDashboard_Main_Wrap{
+    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 .AdminDasboard_Main_Left{
     width: 25%;
-    height: 100vh;
+    height: 88vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: grey;
+    /* background-color:  #0277BD; */
+    background-color: #FB8500;
 }
 .AdminDashboard_Main_Right{
     width: 75%;
-    height: 100vh;
+    height: 88vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: aquamarine;
+    background-color: white;
+}
+.AdminHeader_Main{
+    width: 100%;
+    height: 12vh;
+    /* background-color: #FB8500; */
+    background-color:  #0277BD;
 }
