--- a/src/Component1/Header/Header.css
+++ b/src/Component1/Header/Header.css
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     /* padding: 10px; */
-    box-shadow: 0px 1px 2px 0px rgba(116, 106, 115, 1);
+    /* box-shadow: 0px 1px 2px 0px rgba(116, 106, 115, 1); */
 }
 .Header_Wrap{
     width: 90%;
@@ -46,7 +46,7 @@
     height: 45px;
     border-radius: 8px;
     border: none;
-    background-color: #5390D9;
+    background-color: #FB8500;
     color: white;
 }
 .Header_Button_SignUp:hover{
