--- a/src/Component1/AdminDashboard/AdminDashboard.css
+++ b/src/Component1/AdminDashboard/AdminDashboard.css
@@ -26,10 +26,18 @@
     align-items: center;
     justify-content: center;
     background-color: white;
+    padding: 10px;
 }
 .AdminHeader_Main{
     width: 100%;
     height: 12vh;
     /* background-color: #FB8500; */
     background-color:  #0277BD;
+}
+.AdminDashboardRight_Main{
+    width: 100%;
+    height: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: center ;
 }
