--- a/src/Component1/LandingPage/LandingPage.css
+++ b/src/Component1/LandingPage/LandingPage.css
@@ -10,5 +10,7 @@
     align-items: center;
     /* justify-content: center; */
     flex-direction: column;
-    background-color: #0277BD;
+    background-color:  #023047;
+    color: white
+    ;
 }
