--- a/src/Component1/AdminDashboard/AdminHeader/AdminHeader.css
+++ b/src/Component1/AdminDashboard/AdminHeader/AdminHeader.css
@@ -1,6 +1,46 @@
 .AdminHeader_Main{
     width: 100%;
     height: 12vh;
-    /* background-color: #FB8500; */
-    background-color:  #0277BD;
+    background-color:  #023047;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.AdminHeader_Main_Wrap{
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+}
+.AdminHeader_Logo{
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+    cursor: pointer;
+}
+.AdminHeader_Logo-Wrap{
+    width: 100px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.AdminHeader_SchoolName{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.AdminHeader_SchoolDropMenu{
+    width: 230px;
+    height: 100px;
+    position: absolute;
+    top: 82px;
+    left: 1050px;
+    background-color:  #023047;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
 }
