--- a/src/Component1/AdminDashboard/AdminDashboard.css
+++ b/src/Component1/AdminDashboard/AdminDashboard.css
@@ -109,9 +109,9 @@
     width: 100%;
     height: 95%;
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center ; */
-    background-color: green;
+    align-items: center;
+    justify-content: center ;
+    /* background-color: green; */
     overflow-y: scroll;
     padding: 10px;
 }
